--- a/Code/WorkSpeed.DesktopClient/Resources/Fonts.xaml
+++ b/Code/WorkSpeed.DesktopClient/Resources/Fonts.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     >
-    <FontFamily x:Key="ft_NotoSerif">pack://application:,,,/Resources/Fonts/Noto_Serif/#Noto Serif</FontFamily>
-    <FontFamily x:Key="font_SuiGeneris">pack://application:,,,/Resources/Fonts/#Sui Generis Rg</FontFamily>
+    <FontFamily x:Key="font_NotoSerif">pack://application:,,,/../../Resources/Fonts/Noto_Serif/#Noto Serif</FontFamily>
+    <FontFamily x:Key="font_Rubik">pack://application:,,,/../../Resources/Fonts/Rubik/#Rubik</FontFamily>
+    <FontFamily x:Key="font_SuiGeneris">pack://application:,,,/../../Resources/Fonts/#Sui Generis Rg</FontFamily>
 </ResourceDictionary>
