--- a/Code/WorkSpeed.DesktopClient/Resources/Glyphs.xaml
+++ b/Code/WorkSpeed.DesktopClient/Resources/Glyphs.xaml
@@ -2,17 +2,31 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     >
 
-    <GeometryGroup x:Key="g_EmployeesIcon" >
-        <PathGeometry Figures="M9,9 c0-1.7,1.3-3,3-3s3,1.3,3,3c0,1.7-1.3,3-3,3S9,10.7,9,9z M12,14c-4.6,0-6,3.3-6,3.3V19h12v-1.7C18,17.3,16.6,14,12,14z" />
-        <EllipseGeometry Center="18.5,8.5" RadiusX="2.5" RadiusY="2.5" />
-        <PathGeometry Figures="M18.5,13c-1.2,0-2.1,0.3-2.8,0.8c2.3,1.1,3.2,3,3.2,3.2l0,0.1H23v-1.3C23,15.7,21.9,13,18.5,13z" />
-        <EllipseGeometry Center="5.5,8.5" RadiusX="2.5" RadiusY="2.5" />
-        <PathGeometry Figures="M5.5,13c1.2,0,2.1,0.3,2.8,0.8c-2.3,1.1-3.2,3-3.2,3.2l0,0.1H1v-1.3C1,15.7,2.1,13,5.5,13z" />
-
-        <GeometryGroup.Transform>
-            <TranslateTransform Y="-6"></TranslateTransform>
-        </GeometryGroup.Transform>
+    <GeometryGroup x:Key="g_Import">
+        <PathGeometry Figures="M32.18,0H28.8V5.38h3.38a2.44,2.44,0,0,1,2.44,2.44V32.18a2.44,2.44,0,0,1-2.44,2.44H7.82a2.44,2.44,0,0,1-2.43-2.44V7.82A2.44,2.44,0,0,1,7.82,5.38h3.39V0H7.82A7.83,7.83,0,0,0,0,7.82V32.18A7.83,7.83,0,0,0,7.82,40H32.18A7.82,7.82,0,0,0,40,32.18V7.82A7.82,7.82,0,0,0,32.18,0Z" />
+        <PathGeometry>
+            <PathFigure>
+                <PolyLineSegment Points="27.18 17.94 20 30.38 12.82 17.94 17 17.94 17 0 23 0 23 17.94 27.18 17.94" />
+            </PathFigure>
+        </PathGeometry>
     </GeometryGroup>
+
+    <GeometryGroup x:Key="g_Productivity" >
+        <PathGeometry Figures="M8,20H4a4,4,0,0,0-4,4V36a4,4,0,0,0,4,4H8a4,4,0,0,0,4-4V24A4,4,0,0,0,8,20Z" />
+        <PathGeometry Figures="M24,0H20a4,4,0,0,0-4,4V36a4,4,0,0,0,4,4h4a4,4,0,0,0,4-4V4A4,4,0,0,0,24,0Z" />
+        <PathGeometry Figures="M40,12H36a4,4,0,0,0-4,4V36a4,4,0,0,0,4,4h4a4,4,0,0,0,4-4V16A4,4,0,0,0,40,12Z" />
+    </GeometryGroup>
+    
+    <GeometryGroup x:Key="g_Employees" >
+        <PathGeometry Figures="M33.85,24.74c-14.15,0-18.46,10.15-18.46,10.15v5.23H52.31V34.89S48,24.74,33.85,24.74Z" />
+        <EllipseGeometry Center="53.85,7.82" RadiusX="7.69" RadiusY="7.69" />
+        <PathGeometry Figures="M54.18,21.36a13.73,13.73,0,0,0-8.41,2.46c6.9,3.38,9.61,9.23,9.61,9.85V34H67.69V30C67.69,29.66,64.39,21.36,54.18,21.36Z" />
+        <EllipseGeometry Center="13.85,7.82" RadiusX="7.69" RadiusY="7.69" />
+        <PathGeometry Figures="M13.51,21.36a13.73,13.73,0,0,1,8.41,2.46C15,27.2,12.31,33,12.31,33.66V34H0V30C0,29.66,3.3,21.36,13.51,21.36Z" />
+        <EllipseGeometry Center="33.85,9.34" RadiusX="9.34" RadiusY="9.34" />
+    </GeometryGroup>
+
+    <PathGeometry x:Key="g_Settings" Figures="M35.68,24l-2-1.17a3.43,3.43,0,0,1,0-5.83l2-1.17a3.17,3.17,0,0,0,1.17-4.5L35.18,8.5a3.17,3.17,0,0,0-4.5-1.17l-2,1.17a3.33,3.33,0,0,1-5-2.83V3.33A3.34,3.34,0,0,0,20.35,0H17a3.34,3.34,0,0,0-3.33,3.33V5.5a3.33,3.33,0,0,1-5,2.83l-2-1A3.23,3.23,0,0,0,2.18,8.5L.51,11.33A3.63,3.63,0,0,0,1.68,16l2,1.17a3.28,3.28,0,0,1,0,5.67L1.68,24A3.17,3.17,0,0,0,.51,28.5l1.67,2.83a3.17,3.17,0,0,0,4.5,1.17l2-1a3.33,3.33,0,0,1,5,2.83v2.33A3.34,3.34,0,0,0,17,40h3.33a3.34,3.34,0,0,0,3.33-3.33V34.5a3.33,3.33,0,0,1,5-2.83l2,1.17a3.23,3.23,0,0,0,4.5-1.17l1.67-2.83A3.8,3.8,0,0,0,35.68,24ZM19,26.67A6.67,6.67,0,1,1,25.69,20,6.69,6.69,0,0,1,19,26.67Z" />
 
     <GeometryGroup x:Key="g_ProductsIcon" >
         <PathGeometry Figures="M74,70.7c-5.7,0-10.4,4.6-10.4,10.4c0,5.7,4.6,10.4,10.4,10.4c5.7,0,10.4-4.6,10.4-10.4c0,0,0,0,0,0   C84.3,75.4,79.7,70.7,74,70.7z" />
@@ -20,11 +34,6 @@
         <PathGeometry Figures="M38.2,70.7C32.4,71,28,75.8,28.2,81.5c0.2,5.5,4.7,9.9,10.2,9.9h0.2c5.7-0.3,10.2-5.1,9.9-10.8   C48.3,75.1,43.7,70.7,38.2,70.7z" />
     </GeometryGroup>
 
-    <GeometryGroup x:Key="g_ProductivityIcon" >
-        <PathGeometry Figures="M5,12H3c-1.1,0-2,0.9-2,2v6c0,1.1,0.9,2,2,2h2c1.1,0,2-0.9,2-2v-6C7,12.9,6.1,12,5,12z" />
-        <PathGeometry Figures="M13,2h-2C9.9,2,9,2.9,9,4v16c0,1.1,0.9,2,2,2h2c1.1,0,2-0.9,2-2V4C15,2.9,14.1,2,13,2z" />
-        <PathGeometry Figures="M21,8h-2c-1.1,0-2,0.9-2,2v10c0,1.1,0.9,2,2,2h2c1.1,0,2-0.9,2-2V10C23,8.9,22.1,8,21,8z" />
-    </GeometryGroup>
 
     <PathGeometry x:Key="g_EditIcon" Figures="M21.635,6.366c-0.467-0.772-1.043-1.528-1.748-2.229c-0.713-0.708-1.482-1.288-2.269-1.754L19,1C19,1,21,1,22,2S23,5,23,5  
                            L21.635,6.366z M10,18H6v-4l0.48-0.48c0.813,0.385,1.621,0.926,2.348,1.652c0.728,0.729,1.268,1.535,1.652,2.348L10,18z M20.48,7.52  
