--- a/Code/WorkSpeed.DesktopClient/Resources/HeaderContentControlStyles.xaml
+++ b/Code/WorkSpeed.DesktopClient/Resources/HeaderContentControlStyles.xaml
@@ -8,9 +8,9 @@
         <Setter Property="Margin" Value="5,5,5,20" />
         <Setter Property="HorizontalAlignment" Value="Center" />
         <Setter Property="VerticalAlignment" Value="Center" />
-        <Setter Property="Background" Value="{StaticResource br_MainWindow.Background}" />
+        <Setter Property="Background" Value="{StaticResource br_Window.Background}" />
         <Setter Property="TextElement.FontSize" Value="14" />
-        <Setter Property="TextElement.FontFamily" Value="{StaticResource ft_NotoSerif}" />
+        <Setter Property="TextElement.FontFamily" Value="{StaticResource font_NotoSerif}" />
         <Setter Property="TextElement.Foreground" Value="{StaticResource br_MainWindow.BackgroundAlternative}" />
         <Setter Property="Grid.IsSharedSizeScope" Value="True" />
     </Style>
@@ -66,7 +66,7 @@
         <Setter Property="Padding" Value="2,0" />
         <Setter Property="BorderThickness" Value="0,0,0,1" />
         <Setter Property="BorderBrush" Value="{StaticResource br_MainWindow.BackgroundAlternative}" />
-        <Setter Property="Background" Value="{StaticResource br_MainWindow.Background}" />
+        <Setter Property="Background" Value="{StaticResource br_Window.Background}" />
         <Setter Property="Foreground" Value="Black" />
         <Setter Property="FontSize" Value="14" />
     </Style>
