--- a/Code/WorkSpeed.DesktopClient/Views/MainWindow.xaml
+++ b/Code/WorkSpeed.DesktopClient/Views/MainWindow.xaml
@@ -25,7 +25,6 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="views:MainWindow">
-                    <Grid>
                         <Border x:Name="MainBorder"
                                 BorderBrush="{TemplateBinding BorderBrush}"
                                 BorderThickness="1"
@@ -71,20 +70,19 @@
 
                                 <Border x:Name="PART_TITLEBAR"
                                     Margin="2,0,2,2"
-                                    Height="40"
+                                    Height="0"
                                     DockPanel.Dock="Top"
                                     CornerRadius="2"
                                     Background="Transparent">
 
                                 </Border>
 
-                                    <!-- Actual Window Content -->
+                                <!-- Actual Window Content -->
                                 <AdornerDecorator DockPanel.Dock="Bottom">
                                     <ContentPresenter />
                                 </AdornerDecorator>
                             </DockPanel>
                         </Border>
-                    </Grid>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
@@ -310,7 +308,18 @@
         </behavior:EventTrigger>
     </behavior:Interaction.Triggers>
 
-    <Grid RenderTransform="1,0,0,1,0,-20">
+    <Grid RenderTransform="1,0,0,1,0,10">
+
+        <Grid.Style>
+            <Style TargetType="Grid">
+                <Setter Property="Background" Value="Aqua"></Setter>
+                <Style.Triggers>
+                    <DataTrigger Binding="{Binding ElementName=m_Window, Path=WindowState}" Value="{x:Static WindowState.Maximized}">
+                        <Setter Property="RenderTransform" Value="1,0,0,1,0,0" ></Setter>
+                    </DataTrigger>
+                </Style.Triggers>
+            </Style>
+        </Grid.Style>
 
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
